--- a/Block/navindex.html
+++ b/Block/navindex.html
@@ -7,19 +7,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ">
-                <li class="nav-item">
+        <div class="collapse  ms-auto navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ms-auto">
                     <a class="nav-link nav-texte" href="#">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-texte" href="#">À propos</a>
+                    <a class="nav-link nav-texte" href="#">Carte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-texte" href="#">Services</a>
+                    <a class="nav-link nav-texte" href="#">Découvrire</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-texte" href="#">Contact</a>
+                    <a class="nav-link nav-texte" href="#">Favorie</a>
                 </li>
             </ul>
         </div>
